fixed nav right spacing on smallest non phone size

--- a/app/components/Nav/Nav.css
+++ b/app/components/Nav/Nav.css
@@ -201,6 +201,10 @@ nav {
 
     nav { width: 652px; }
 
+    #nav-right {
+        gap: 7px;
+    }
+
 }
 
 /* iPhone Plus */
